Changes: - Added a modal component to add and edit universes. - Added a table to visualize existing universes. - Added a shared modal component to display hints or errors.

--- a/client/tsconfig.json
+++ b/client/tsconfig.json
@@ -5,6 +5,7 @@
   "compilerOptions": {
     "baseUrl": "./src/app",
     "paths": {
+      "@interfaces/*": [ "./interfaces/*" ],
       "@entities/*": [ "./entities/*" ],
       "@services/*": [ "./services/*" ],
       "@shared/*": [ "./shared/*" ],
