--- a/server/package.json
+++ b/server/package.json
@@ -2,29 +2,28 @@
     "name": "server",
     "type": "module",
     "scripts": {
-        "nodemon": "npx nodemon --exec \"bb-path-alias start ./src/index.ts\"",
         "typeorm": "node --import @bleed-believer/path-alias ./node_modules/typeorm/cli.js",
-        "setup": "bb-path-alias start ./src/setup.ts",
-        "start": "bb-path-alias start ./src/index.ts",
+        "watch": "node --import @bleed-believer/path-alias --watch ./src/index.ts",
+        "setup": "node --import @bleed-believer/path-alias ./src/setup.ts",
+        "start": "node --import @bleed-believer/path-alias ./src/index.ts",
         "check": "tsc --noEmit",
         "clean": "rm -rf ./dist",
         "build": "npm run clean && bb-path-alias build ./tsconfig.build.json"
     },
     "devDependencies": {
+        "@bleed-believer/path-alias": "^2.2.1",
         "@types/express": "^5.0.0",
-        "@types/node": "^22.7.6",
-        "ava": "^6.1.3",
-        "nodemon": "^3.1.7",
-        "typescript": "^5.6.3"
+        "@types/node": "^22.13.1",
+        "ava": "^6.2.0",
+        "typescript": "^5.7.3"
     },
     "dependencies": {
         "@bleed-believer/commander": "^0.11.3",
         "@bleed-believer/espresso": "^0.11.3",
-        "@bleed-believer/path-alias": "^2.1.2",
         "audit-var": "^2.3.1",
         "sqlite3": "^5.1.7",
         "tslog": "^4.9.3",
         "typeorm": "^0.3.20",
-        "yaml": "^2.6.0"
+        "yaml": "^2.7.0"
     }
 }
